# cf-latency-test-across-the-world

./: .dockerignore  .gitignore  Readme.MD  app.py  docker-compose.yaml  log-events-viewer-result.csv  pyproject.toml
infra/custom/: config.py  web_service.py
infra/stacks/: remote_stack.py  shared_stack.py
tester/: Dockerfile  curl-format.txt  curl_script.sh
webservice/: Dockerfile  requirements.txt
webservice/app/: main.py
webservice/app/static/: lorem_ipsum.txt
